// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser function declarations does not allow type designators at end of name 1`] = `
{
  "errors": [
    [Error: Syntax Error. (compile error &h2) Function name 'StringFunc#' cannot end with type designator '#'],
    [Error: Syntax Error. (compile error &h2) Function name 'IntegerFunc%' cannot end with type designator '%'],
    [Error: Syntax Error. (compile error &h2) Function name 'FloatFunc!' cannot end with type designator '!'],
    [Error: Syntax Error. (compile error &h2) Function name 'DoubleFunc#' cannot end with type designator '#'],
  ],
  "statements": [
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 38,
              "line": 2,
            },
          },
          "statements": [
            Return {
              "tokens": {
                "return": {
                  "isReserved": true,
                  "kind": "Return",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 26,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 20,
                      "line": 3,
                    },
                  },
                  "text": "return",
                },
              },
              "value": Literal {
                "_location": {
                  "end": {
                    "column": 28,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 27,
                    "line": 3,
                  },
                },
                "value": Int32 {
                  "inArray": false,
                  "kind": 4,
                  "value": 1,
                },
              },
            },
          ],
        },
        "end": {
          "isReserved": false,
          "kind": "EndFunction",
          "literal": undefined,
          "location": {
            "end": {
              "column": 28,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 4,
            },
          },
          "text": "end function",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Function",
          "literal": undefined,
          "location": {
            "end": {
              "column": 24,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 2,
            },
          },
          "text": "function",
        },
        "parameters": [],
        "returns": 10,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 36,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 25,
            "line": 2,
          },
        },
        "text": "StringFunc#",
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 8,
            },
            "file": "",
            "start": {
              "column": 39,
              "line": 6,
            },
          },
          "statements": [
            Return {
              "tokens": {
                "return": {
                  "isReserved": true,
                  "kind": "Return",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 26,
                      "line": 7,
                    },
                    "file": "",
                    "start": {
                      "column": 20,
                      "line": 7,
                    },
                  },
                  "text": "return",
                },
              },
              "value": Literal {
                "_location": {
                  "end": {
                    "column": 28,
                    "line": 7,
                  },
                  "file": "",
                  "start": {
                    "column": 27,
                    "line": 7,
                  },
                },
                "value": Int32 {
                  "inArray": false,
                  "kind": 4,
                  "value": 1,
                },
              },
            },
          ],
        },
        "end": {
          "isReserved": false,
          "kind": "EndFunction",
          "literal": undefined,
          "location": {
            "end": {
              "column": 28,
              "line": 8,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 8,
            },
          },
          "text": "end function",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Function",
          "literal": undefined,
          "location": {
            "end": {
              "column": 24,
              "line": 6,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 6,
            },
          },
          "text": "function",
        },
        "parameters": [],
        "returns": 10,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 37,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 25,
            "line": 6,
          },
        },
        "text": "IntegerFunc%",
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 12,
            },
            "file": "",
            "start": {
              "column": 37,
              "line": 10,
            },
          },
          "statements": [
            Return {
              "tokens": {
                "return": {
                  "isReserved": true,
                  "kind": "Return",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 26,
                      "line": 11,
                    },
                    "file": "",
                    "start": {
                      "column": 20,
                      "line": 11,
                    },
                  },
                  "text": "return",
                },
              },
              "value": Literal {
                "_location": {
                  "end": {
                    "column": 28,
                    "line": 11,
                  },
                  "file": "",
                  "start": {
                    "column": 27,
                    "line": 11,
                  },
                },
                "value": Int32 {
                  "inArray": false,
                  "kind": 4,
                  "value": 1,
                },
              },
            },
          ],
        },
        "end": {
          "isReserved": false,
          "kind": "EndFunction",
          "literal": undefined,
          "location": {
            "end": {
              "column": 28,
              "line": 12,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 12,
            },
          },
          "text": "end function",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Function",
          "literal": undefined,
          "location": {
            "end": {
              "column": 24,
              "line": 10,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 10,
            },
          },
          "text": "function",
        },
        "parameters": [],
        "returns": 10,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 35,
            "line": 10,
          },
          "file": "",
          "start": {
            "column": 25,
            "line": 10,
          },
        },
        "text": "FloatFunc!",
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 16,
            },
            "file": "",
            "start": {
              "column": 38,
              "line": 14,
            },
          },
          "statements": [
            Return {
              "tokens": {
                "return": {
                  "isReserved": true,
                  "kind": "Return",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 26,
                      "line": 15,
                    },
                    "file": "",
                    "start": {
                      "column": 20,
                      "line": 15,
                    },
                  },
                  "text": "return",
                },
              },
              "value": Literal {
                "_location": {
                  "end": {
                    "column": 28,
                    "line": 15,
                  },
                  "file": "",
                  "start": {
                    "column": 27,
                    "line": 15,
                  },
                },
                "value": Int32 {
                  "inArray": false,
                  "kind": 4,
                  "value": 1,
                },
              },
            },
          ],
        },
        "end": {
          "isReserved": false,
          "kind": "EndFunction",
          "literal": undefined,
          "location": {
            "end": {
              "column": 28,
              "line": 16,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 16,
            },
          },
          "text": "end function",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Function",
          "literal": undefined,
          "location": {
            "end": {
              "column": 24,
              "line": 14,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 14,
            },
          },
          "text": "function",
        },
        "parameters": [],
        "returns": 10,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 36,
            "line": 14,
          },
          "file": "",
          "start": {
            "column": 25,
            "line": 14,
          },
        },
        "text": "DoubleFunc#",
      },
    },
  ],
}
`;

exports[`parser function declarations parses functions with default argument expressions 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 4,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": Binary {
            "left": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 5,
              },
            },
            "token": {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "c",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add",
    },
  },
]
`;

exports[`parser function declarations parses functions with implicit-dynamic arguments 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add2",
    },
  },
]
`;

exports[`parser function declarations parses functions with typed arguments 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "str",
          },
          "type": {
            "kind": 3,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "count",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "repeat",
    },
  },
]
`;

exports[`parser function declarations parses functions with typed arguments and default expressions 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        {
          "defaultValue": Binary {
            "left": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 5,
              },
            },
            "token": {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add",
    },
  },
]
`;

exports[`parser function declarations parses minimal empty function declarations 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser function declarations parses non-empty function declarations 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Print {
            "expressions": [
              Literal {
                "_location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsString {
                  "inArray": false,
                  "kind": 3,
                  "value": "Lorem ipsum",
                },
              },
            ],
            "tokens": {
              "print": {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser function declarations parses return types 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser function declarations recovers when using \`end sub\` instead of \`end function\` 1`] = `
{
  "errors": [
    [Error: Syntax Error. (compile error &h2) Expected 'end function' to terminate function block],
  ],
  "statements": [
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 31,
              "line": 2,
            },
          },
          "statements": [
            Print {
              "expressions": [
                Literal {
                  "_location": {
                    "end": {
                      "column": 39,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 26,
                      "line": 3,
                    },
                  },
                  "value": BrsString {
                    "inArray": false,
                    "kind": 3,
                    "value": "Hello world",
                  },
                },
              ],
              "tokens": {
                "print": {
                  "isReserved": true,
                  "kind": "Print",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 25,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 20,
                      "line": 3,
                    },
                  },
                  "text": "print",
                },
              },
            },
          ],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 23,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 4,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Function",
          "literal": undefined,
          "location": {
            "end": {
              "column": 24,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 2,
            },
          },
          "text": "function",
        },
        "parameters": [],
        "returns": 10,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 29,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 25,
            "line": 2,
          },
        },
        "text": "Main",
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 8,
            },
            "file": "",
            "start": {
              "column": 33,
              "line": 6,
            },
          },
          "statements": [],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 23,
              "line": 8,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 8,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 6,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 6,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 31,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 20,
            "line": 6,
          },
        },
        "text": "DoSomething",
      },
    },
  ],
}
`;

exports[`parser sub declarations does not allow type designators at end of name 1`] = `
{
  "errors": [
    [Error: Syntax Error. (compile error &h2) Function name 'StringSub#' cannot end with type designator '#'],
    [Error: Syntax Error. (compile error &h2) Function name 'IntegerSub%' cannot end with type designator '%'],
    [Error: Syntax Error. (compile error &h2) Function name 'FloatSub!' cannot end with type designator '!'],
    [Error: Syntax Error. (compile error &h2) Function name 'DoubleSub#' cannot end with type designator '#'],
  ],
  "statements": [
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 3,
            },
            "file": "",
            "start": {
              "column": 32,
              "line": 2,
            },
          },
          "statements": [],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 23,
              "line": 3,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 3,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 2,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 30,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 20,
            "line": 2,
          },
        },
        "text": "StringSub#",
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 6,
            },
            "file": "",
            "start": {
              "column": 33,
              "line": 5,
            },
          },
          "statements": [],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 23,
              "line": 6,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 6,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 5,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 5,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 31,
            "line": 5,
          },
          "file": "",
          "start": {
            "column": 20,
            "line": 5,
          },
        },
        "text": "IntegerSub%",
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 9,
            },
            "file": "",
            "start": {
              "column": 31,
              "line": 8,
            },
          },
          "statements": [],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 23,
              "line": 9,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 9,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 8,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 8,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 29,
            "line": 8,
          },
          "file": "",
          "start": {
            "column": 20,
            "line": 8,
          },
        },
        "text": "FloatSub!",
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 12,
            },
            "file": "",
            "start": {
              "column": 32,
              "line": 11,
            },
          },
          "statements": [],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 23,
              "line": 12,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 12,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 11,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 11,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 30,
            "line": 11,
          },
          "file": "",
          "start": {
            "column": 20,
            "line": 11,
          },
        },
        "text": "DoubleSub#",
      },
    },
  ],
}
`;

exports[`parser sub declarations parses minimal sub declarations 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "bar",
    },
  },
]
`;

exports[`parser sub declarations parses non-empty sub declarations 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Print {
            "expressions": [
              Literal {
                "_location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsString {
                  "inArray": false,
                  "kind": 3,
                  "value": "Lorem ipsum",
                },
              },
            ],
            "tokens": {
              "print": {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser sub declarations parses subs with default argument expressions 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 4,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": Binary {
            "left": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 5,
              },
            },
            "token": {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "c",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add",
    },
  },
]
`;

exports[`parser sub declarations parses subs with implicit-dynamic arguments 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add2",
    },
  },
]
`;

exports[`parser sub declarations parses subs with typed arguments 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "str",
          },
          "type": {
            "kind": 3,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "count",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "repeat",
    },
  },
]
`;

exports[`parser sub declarations parses subs with typed arguments and default expressions 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        {
          "defaultValue": Binary {
            "left": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 5,
              },
            },
            "token": {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add",
    },
  },
]
`;

exports[`parser sub declarations recovers when using \`end function\` instead of \`end sub\` 1`] = `
{
  "errors": [
    [Error: Syntax Error. (compile error &h2) Expected 'end sub' to terminate sub block],
  ],
  "statements": [
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 26,
              "line": 2,
            },
          },
          "statements": [
            Print {
              "expressions": [
                Literal {
                  "_location": {
                    "end": {
                      "column": 39,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 26,
                      "line": 3,
                    },
                  },
                  "value": BrsString {
                    "inArray": false,
                    "kind": 3,
                    "value": "Hello world",
                  },
                },
              ],
              "tokens": {
                "print": {
                  "isReserved": true,
                  "kind": "Print",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 25,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 20,
                      "line": 3,
                    },
                  },
                  "text": "print",
                },
              },
            },
          ],
        },
        "end": {
          "isReserved": false,
          "kind": "EndFunction",
          "literal": undefined,
          "location": {
            "end": {
              "column": 28,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 4,
            },
          },
          "text": "end function",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 2,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 24,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 20,
            "line": 2,
          },
        },
        "text": "Main",
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 16,
              "line": 8,
            },
            "file": "",
            "start": {
              "column": 33,
              "line": 6,
            },
          },
          "statements": [],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 23,
              "line": 8,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 8,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 6,
            },
            "file": "",
            "start": {
              "column": 16,
              "line": 6,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 31,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 20,
            "line": 6,
          },
        },
        "text": "DoSomething",
      },
    },
  ],
}
`;
